minimum viable product

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
-
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+        app:cardBackgroundColor="@color/design_default_color_secondary"
         android:layout_width="match_parent"
+        app:cardCornerRadius="12dp"
         android:layout_height="200dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
