--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#E91E63"
+    android:foregroundTint="#E91E63"
     tools:context=".ui.SearchFragment">
 
 
@@ -24,12 +26,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_weight="9"
+            android:autofillHints=""
             android:ems="15"
             android:hint="@string/hint_add_the_city_name"
             android:inputType="text"
             android:text=""
-            android:textSize="15sp"
-            android:autofillHints="" />
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/btn_search"
@@ -50,6 +52,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
     <ProgressBar
         android:id="@+id/pb_search"
         style="?android:attr/progressBarStyle"
@@ -67,9 +70,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="108dp"
+        android:background="@color/design_default_color_error"
         android:clickable="true"
         android:contentDescription="@string/fab_description"
         android:src="@drawable/ic_baseline_favorite_24"
+        android:tint="#E91E63"
+        app:backgroundTint="@color/design_default_color_error"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
